@@ -5,10 +5,6 @@ bin_PROGRAMS = makedict
 SCRIPT_CODECS = mueller7_parser.py mdparser.py apresyan.py
 noinst_PYTHON = $(SCRIPT_CODECS)
 
-PARSER_LIB = parser.cpp parser.hpp utils.cpp utils.hpp file.cpp file.hpp
-GENERATOR_LIB = generator.cpp generator.hpp utils.cpp utils.hpp \
-	file.cpp file.hpp xml.cpp xml.hpp
-
 makedict_SOURCES = \
 	makedict.cpp \
 	process.cpp process.hpp \
@@ -22,7 +18,7 @@ makedict_SOURCES = \
 	connector.cpp connector.hpp \
 	dsl_parser.cpp \
 	charset_conv.cpp charset_conv.hpp \
-	mapfile.hpp \
+	mapfile.cpp mapfile.hpp \
 	normalize_tags.cpp normalize_tags.hpp \
 	sdict_parser.cpp \
 	langs_2to3.cpp langs_2to3.hpp \
@@ -32,7 +28,8 @@ makedict_SOURCES = \
 	stardict_generator.cpp \
 	dictd_generator.cpp \
 	dictd_parser.cpp \
-	resource.hpp
+	resource.hpp \
+	stardict_parser.cpp
 
 LDADD = @MAKEDICT_LIBS@ 
 #makedict_LDADD = @MAKEDICT_LIBS@ 
