@@ -1,0 +1,7 @@
+StarDict's dict ifo file
+version=2.4.2
+wordcount=10
+idxfilesize=170
+bookname=dummy
+date=2006.09.18
+sametypesequence=x
