@@ -1,3 +1,4 @@
+- stardict parser
 - sdict: --parser-option "remove-duplication=yes" to fix broken rus_bse
 dictionary
 - introduce new scheme of parser<->generator cooperation to speedup makedict
